--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <button id="clearButton" class="col-1 btn btn-danger">Clear Day</button>
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -40,8 +41,8 @@
         -->
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
+      <div id="hour-9" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">09AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -49,7 +50,7 @@
       </div>
 
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
+      <div id="hour-10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -58,7 +59,7 @@
       </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
+      <div id="hour-11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -67,7 +68,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-12" class="row time-block future">
+       <div id="hour-12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -76,7 +77,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-14" class="row time-block future">
+       <div id="hour-14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -85,7 +86,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-14" class="row time-block future">
+       <div id="hour-14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -94,7 +95,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-15" class="row time-block future">
+       <div id="hour-15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -103,7 +104,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-16" class="row time-block future">
+       <div id="hour-16" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -111,22 +112,21 @@
         </button>
       </div>
 
-             <!-- Example of a future time block. The "future" class adds a green background color. -->
-             <div id="hour-17" class="row time-block future">
-              <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-              <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-              <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-                <i class="fas fa-save" aria-hidden="true"></i>
-              </button>
-            </div>
+          <!-- Example of a future time block. The "future" class adds a green background color. -->
+          <div id="hour-17" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
-
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
