--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
       <button id="clearButton" class="col-1 btn btn-danger">Clear Day</button>
+      <button id="saveAllButton" class="col-1 btn btn-success save-all-btn" aria-label="save-all">
+        Save All
+      </button>
+      
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -77,7 +81,7 @@
       </div>
 
        <!-- Example of a future time block. The "future" class adds a green background color. -->
-       <div id="hour-14" class="row time-block">
+       <div id="hour-13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
